change daemon binary name to DogeBlackCoin and default datadir

--- a/src/makefile.unix
+++ b/src/makefile.unix
@@ -144,7 +144,7 @@ OBJS= \
     obj/txdb.o
 
 
-all: bitcoind
+all: DogeBlackCoind
 
 test check: test_bitcoin FORCE
 	./test_bitcoin
@@ -175,7 +175,7 @@ obj/%.o: %.cpp
 	      -e '/^$$/ d' -e 's/$$/ :/' < $(@:%.o=%.d) >> $(@:%.o=%.P); \
 	  rm -f $(@:%.o=%.d)
 
-bitcoind: $(OBJS:obj/%=obj/%)
+DogeBlackCoind: $(OBJS:obj/%=obj/%)
 	$(LINK) $(xCXXFLAGS) -o $@ $^ $(xLDFLAGS) $(LIBS)
 
 TESTOBJS := $(patsubst test/%.cpp,obj-test/%.o,$(wildcard test/*.cpp))
